# SyntheticLanguages

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  grid_ideas.py  index.html  mkdocs.yml  pyproject.toml  requirements.txt  search.html  synthetic_languages_ideas.py
about/: index.html
docs/: about.md  gen_ref_pages.py  index.md
docs/guides/: creating-a-custom-language.md  getting-started.md
guides/: README.md  msp_analysis.ipynb  rrxor.ipynb  rrxor_compmech.ipynb  rrxor_simplex.ipynb  z1r.ipynb
guides/creating-a-custom-language/: index.html
guides/getting-started/: index.html
how-to/: index.html
search/: search_index.json
src/synthetic_languages/: main.py  persistence.py
src/synthetic_languages/analysis/: activation_analysis.py
src/synthetic_languages/nn/: simple_transformer.py
src/synthetic_languages/process/: dataset.py  process.py  processes.py
src/synthetic_languages/training/: train.py
src/synthetic_languages/training/configs/: model_configs.py  training_configs.py
src/synthetic_languages/visualization/: graph.py  plots.py
synthetic_languages/: persistence.py
synthetic_languages/analysis/: activation_analysis.py  entropy_analysis.py  error_analysis.py
synthetic_languages/nn/: simple_transformer.py
synthetic_languages/process/: MixedStateTree.py  dataset.py  process.py  processes.py
synthetic_languages/training/: train.py
synthetic_languages/training/configs/: base_config.py  model_configs.py  training_configs.py
synthetic_languages/utils/: misc.py
synthetic_languages/visualization/: graph.py  plots.py
tests/: test_nothing.py
tutorials/: README.md
