[tool.poetry]
# Package mode tells poetry that this is going to be a pip-style package
package-mode = true
name = "synthetic-languages"
version = "0.2.0"
description = "Generate fake languages spanning hidden markov models to much more so as to understand how neural networks learn to model the world."
authors = ["Adriano <adrianoh@mit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34.105"
fire = "^0.6.0"
jaxtyping = "^0.2.28"
markdown-callouts = "^0.4.0"
markdown-it-py = "^3.0.0"
matplotlib = "^3.8.4"
numpy = "^1.26.4"
pandas = "^2.2.2"
plotly = "^5.22.0"
pre-commit = "^3.7.1"
pydantic = "^2.7.1"
PyDrive = "^1.3.1"
python-dotenv = "^1.0.1"
scikit-learn = "^1.4.2"
seaborn = "^0.13.2"
torch = "^2.2.2"
tqdm = "^4.66.4"
wandb = "^0.17.0"

[tool.poetry.group.dev.dependencies]
# Not all of these might be in use!
# TODO(Adriano) we will reap a bunch of these away soon/later
# mypy = "^1.10.0"
tomli = "^2.0.1"
Pygments = "^2.18.0"
pymdown-extensions = "^10.8.1"
pyright = "^1.1.363"
pytest = "^8.2.0"
black = "^24.4.2"
codespell = "^2.2.6"
# circuitsvis = "^1.43.2"
click = "^8.1.7"
einops = "^0.7.0"
fancy-einsum = "^0.0.3"
# gradio = "^4.31.2"
ipywidgets = "^8.1.2"
jaxtyping = "^0.2.28"
jupyterlab = "^4.1.8"
notebook = "^7.1.3"
# opencv-python = "^4.9.0.80"
# poetry = "^1.8.3"
# sae-lens = "^2.1.3"
tqdm = "^4.66.4"
transformer-lens = "^1.17.0"
transformers = "^4.40.2"
# trl = "^0.8.6"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-gen-files = "^0.5.0"
mkdocs-material = "^9.5.23"
mkdocstrings = "^0.25.1"
mkdocstrings-python = "^1.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# pyflakes, pycodestyle, isort
select = ["F", "E", "W", "I001"]
# We get a-lot of forward-annotation syntax errors due to the use of Jaxtyping (and
# trust that the only cause is that):
# - https://docs.kidger.site/jaxtyping/faq/
# https://docs.astral.sh/ruff/rules/forward-annotation-syntax-error/
ignore = ["F722"]

[tool.pyright]
# TODO(Adriano) these two files will be fixed later
ignore = ["synthetic_languages_ideas.py", "grid_ideas.py"]
reportMissingParameterType = true
# TODO(Adriano) very annoying issue with jaxtyping
reportUnknownParameterType = false

[tool.pytest.ini_options]
testpaths = ["tests"]
